create models and give them relationa

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -39,7 +39,35 @@
     "dataSource": "db",
     "public": true
   },
-   "Lesson": {
+  "Lesson": {
+    "dataSource": "db",
+    "public": true
+  },
+  "Comment": {
+    "dataSource": "db",
+    "public": true
+  },
+  "Affiliate": {
+    "dataSource": "db",
+    "public": true
+  },
+  "Order": {
+    "dataSource": "db",
+    "public": true
+  },
+  "Item": {
+    "dataSource": "db",
+    "public": true
+  },
+  "Member": {
+    "dataSource": "db",
+    "public": true
+  },
+  "News": {
+    "dataSource": "db",
+    "public": true
+  },
+  "Notification": {
     "dataSource": "db",
     "public": true
   }
